@@ -9,6 +9,10 @@ Nový doplnok pre multimedialne centrum KODI slúžiaci na sledovanie archívu T
 
 V prípade otázok / návrhov využite pull request na githube
 
+#### Doležité informácie
+Doplnok čerpá len z voľnedostuoných zdrojov a nevyužíva žiadne iné zdroje ako originálne zdroje z televízie LUX.
+Samotný doplnok nemá žiaden obsah ktorý by nebol verejne prístupný
+
 **Upozornenie**: Doplnok je funkčný na verziách KODI 19(matrix) alebo novšie
 
 <div style="text-align:center">
