@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <addon id="plugin.video.tvlux.sk"
-version="1.2.0"
+version="1.3.0"
 name="Televízia LUX"
 provider-name="VincoNafta">
 <requires>
