@@ -1,3 +1,5 @@
+[B]1.3.0[/B]
+- Added listing
 [B]1.2.0[/B]
 - Added livestream
 [B]1.0.0[/B]
